[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/imgs/tempHello.png" type="Texture" id=1]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/world/World.gd" type="Script" id=3]
[ext_resource path="res://assets/songs/chillBackBeat.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/imgs/infoMercial - Copy.png" type="Texture" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 217, 62, 1 )

[node name="World" type="Spatial"]
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 3, 4, 3 )

[node name="WorldStuff" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="WorldStuff"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 1, 0 )
light_energy = 0.25

[node name="DirectionalLight2" type="DirectionalLight" parent="WorldStuff"]
transform = Transform( -0.258819, 0.683013, -0.683013, 0, 0.707107, 0.707107, 0.965926, 0.183013, -0.183013, 0, 1, 0 )
visible = false
light_energy = 0.25

[node name="DirectionalLight3" type="DirectionalLight" parent="WorldStuff"]
transform = Transform( -1, 0, 0, 0, 0.707107, 0.707107, 0, 0.707107, -0.707107, 0, 1, 0 )
visible = false
light_energy = 0.25

[node name="DirectionalLight4" type="DirectionalLight" parent="WorldStuff"]
transform = Transform( 4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, -3.09086e-08, 3.09086e-08, 0, 1, 0 )
visible = false
light_energy = 0.25

[node name="Timer" type="Timer" parent="WorldStuff"]
autostart = true

[node name="Sprite3D" type="Sprite3D" parent="WorldStuff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.97068, 6.17772, 7 )
billboard = 1
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="WorldStuff"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 7, 8.22579, -0.603971 )
billboard = 1
texture = ExtResource( 1 )

[node name="musicPlayer" type="AudioStreamPlayer" parent="WorldStuff"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="StaticBody" type="StaticBody" parent="WorldStuff"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 187, 54, -20 )

[node name="CollisionShape" type="CollisionShape" parent="WorldStuff/StaticBody"]
shape = SubResource( 1 )

[node name="StaticBody2" type="StaticBody" parent="WorldStuff"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -21, 54, 184 )

[node name="CollisionShape" type="CollisionShape" parent="WorldStuff/StaticBody2"]
shape = SubResource( 1 )

[node name="StaticBody3" type="StaticBody" parent="WorldStuff"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 206, 54, 380 )

[node name="CollisionShape" type="CollisionShape" parent="WorldStuff/StaticBody3"]
shape = SubResource( 1 )

[node name="StaticBody4" type="StaticBody" parent="WorldStuff"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 383, 54, 190 )

[node name="CollisionShape" type="CollisionShape" parent="WorldStuff/StaticBody4"]
shape = SubResource( 1 )

[connection signal="timeout" from="WorldStuff/Timer" to="." method="_on_Timer_timeout"]
